# fava-almost-pedantic

./: README.md  pyproject.toml
src/almost_pedantic/: __init__.py  nodupswithmeta.py  pedantic.py
