[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fava-almost-pedantic"
version = "0.1"
description = "Pedantic public with no duplicates that includes meta"
authors = [{name = "Paul"}]
requires-python = ">=3.6"

[tool.setuptools.packages.find]
where = ["src"]

